# Inventory-Tracker-CLI

./: README.md  pyproject.toml  requirements.md
inventory_cli/: __main__.py  requirements.txt
inventory_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
